# beef_market

./: .gitignore  Cargo.toml  beef_market.nix  beef_market_module.nix  config.toml  flake.nix  geckodriver_module.nix  test.nix  test_beef_market.nix  test_geckodriver.nix
migrations/: 20241218105415_intial_db_structure.sql  20241228101715_worker_runs.sql  20241229132353_shops_table_improvements.sql
src/: clock.rs  config.rs  lib.rs  logger.rs  main.rs  ollama.rs  worker.rs
src/barbora/: mod.rs
src/db/: beef_cut.rs  mod.rs  product.rs  product_history.rs
src/migrator/: main.rs
src/rimi/: mod.rs
src/scraper/: mod.rs
src/scraper/barbora/: mod.rs
src/scraper/rimi/: mod.rs
src/scraper/selver/: mod.rs
src/selver/: mod.rs
src/worker/: db_queries.rs  mod.rs
