[package]
name = "beef_market"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
fantoccini = "0.21.2"
headless_chrome = "1.0.15"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
ollama-rs = "0.2.1"
reqwest = { version = "0.12.9", features = ["json", "native-tls"] }
scraper = "0.21.0"
serde_json = "1.0.133"
sqlite-vec = "0.1.6"
sqlx = { version = "0.8.2", features = ["sqlite"] }
tokio = { version = "1.42.0", features = ["full"] }
zerocopy = "0.8.13"
