[package]
name = "beef_market"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
async-trait = "0.1.83"
config = "0.14.1"
fantoccini = "0.21.2"
headless_chrome = "1.0.15"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
ollama-rs = "0.2.1"
reqwest = { version = "0.12.9", features = ["json", "native-tls"] }
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
scraper = "0.21.0"
secrecy = "0.10.3"
serde = "1.0.216"
serde_json = "1.0.133"
sqlite-vec = "0.1.6"
sqlx = { version = "0.8.2", features = ["sqlite","runtime-tokio"] }
tokio = { version = "1.42.0", features = ["full"] }
validator = { version = "0.19.0", features = ["derive"] }
zerocopy = "0.8.13"

[[bin]]
name = "migrator"
path = "src/migrator/main.rs"

[[bin]]
name = "server"
path = "src/main.rs"
